third_party/rust/cxx/v1/crate/tests/ui/enum_overflows.stderr
error: discriminant overflow on value after 18446744073709551615
  --> $DIR/enum_overflows.rs:13:9
   |
13 |         F,
   |         ^
